# front-end

./: Cargo.toml  index.html  package-lock.json
src/: app.rs  config.rs  main.rs  phantom.rs
src/component/: bet.rs  mod.rs  user_info.rs
